// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemNotesEditor matches snapshot with notes present 1`] = `
<View
  collapsable={false}
  style={
    {
      "marginTop": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Notes
    </Text>
  </View>
  <TextInput
    accessibilityLabel="Item notes"
    blurOnSubmit={false}
    multiline={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Add your notes about condition, origin, where you bought it, etc."
    placeholderTextColor="#64748B"
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "fontSize": 14,
          "lineHeight": 18,
          "marginTop": 8,
          "maxHeight": 132,
          "minHeight": 64,
          "paddingHorizontal": 10,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
          "color": "#0F172A",
        },
      ]
    }
    textAlignVertical="top"
    value="Mint condition, purchased at local shop"
  />
  <View
    accessibilityLabel="No changes to save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "marginTop": 8,
          "minHeight": 44,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#E2E8F060",
          "opacity": 0.7,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "700",
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Saved
    </Text>
  </View>
</View>
`;

exports[`ItemNotesEditor renders with minimal props and matches snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "marginTop": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Notes
    </Text>
  </View>
  <TextInput
    accessibilityLabel="Item notes"
    blurOnSubmit={false}
    multiline={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="Add your notes about condition, origin, where you bought it, etc."
    placeholderTextColor="#64748B"
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "fontSize": 14,
          "lineHeight": 18,
          "marginTop": 8,
          "maxHeight": 132,
          "minHeight": 64,
          "paddingHorizontal": 10,
          "paddingVertical": 8,
        },
        {
          "backgroundColor": "#F8FAFC",
          "borderColor": "#E2E8F0",
          "color": "#0F172A",
        },
      ]
    }
    textAlignVertical="top"
    value=""
  />
  <View
    accessibilityLabel="No changes to save"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 16,
          "justifyContent": "center",
          "marginTop": 8,
          "minHeight": 44,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#E2E8F060",
          "opacity": 0.7,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
            "fontWeight": "700",
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Saved
    </Text>
  </View>
</View>
`;

exports[`ItemPriceSection matches snapshot with scarcity and comps 1`] = `
[
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Price range
    </Text>
    <Text
      style={
        {
          "color": "#0F172A",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      80
       – 
      120
       – 
      200
    </Text>
  </View>,
  <View
    style={
      {
        "marginTop": 12,
      }
    }
  >
    <Text>
      Confidence: 
      0.9
    </Text>
  </View>,
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "marginTop": 16,
          "paddingTop": 12,
        },
        {
          "borderTopColor": "#E2E8F0",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Why this price, expanded"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#81D8D0",
                "fontSize": 18,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          Why this price?
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#64748B",
              "fontSize": 18,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        [
          {
            "borderRadius": 10,
            "marginTop": 10,
            "padding": 12,
          },
          {
            "backgroundColor": "#F8FAFC",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 14,
              "lineHeight": 19,
            },
            {
              "color": "#64748B",
            },
          ]
        }
      >
        Strong market data
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Scarcity: Rare, 1 listings, supply declining"
    accessibilityRole="summary"
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "marginBottom": 4,
          "marginTop": 10,
          "padding": 10,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E2E8F0",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#EF4444",
              "fontSize": 16,
            },
            undefined,
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "fontWeight": "600",
            },
            {
              "color": "#0F172A",
            },
          ]
        }
      >
        Rare
      </Text>
      <Text
        style={
          [
            {
              "flex": 1,
              "fontSize": 12,
              "textAlign": "right",
            },
            {
              "color": "#64748B",
            },
          ]
        }
      >
        1
         listings · Supply 
        declining
      </Text>
    </View>
  </View>,
]
`;

exports[`ItemPriceSection renders with legacy price bands and matches snapshot 1`] = `
[
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 6,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#64748B",
          },
        ]
      }
    >
      Price range
    </Text>
    <Text
      style={
        {
          "color": "#0F172A",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      100
       – 
      200
       – 
      350
    </Text>
  </View>,
  <View
    style={
      {
        "marginTop": 12,
      }
    }
  >
    <Text>
      Confidence: 
      0.85
    </Text>
  </View>,
  <View
    style={
      [
        {
          "borderTopWidth": 1,
          "marginTop": 16,
          "paddingTop": 12,
        },
        {
          "borderTopColor": "#E2E8F0",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Why this price, collapsed"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#0F172A",
              },
            ]
          }
        >
          Why this price?
        </Text>
      </View>
      <Text />
    </View>
  </View>,
]
`;
